--- a/templates/session.html
+++ b/templates/session.html
@@ -143,7 +143,7 @@
 
       function extractData(target) {
       target.classList.add("selected");
-      window.transfer_payload = target.innerHTML;
+      window.transfer_payload = target.innerHTML.trim();
       }
 
       function loadData(target,payload = window.transfer_payload,team=own_team) {
@@ -177,7 +177,6 @@
       }
       // check if existing payload is in browser
       if (typeof window.transfer_payload !== 'undefined') {
-        
         // check if user is trying to move piece to same square
         if (clickedOn.classList.contains('selected') === false) {
               // check if user is trying to move where they already have another piece
@@ -202,8 +201,8 @@
         // if move is invalid, get selected grid square, and remove class
         document.getElementsByClassName("selected")[0].classList.remove("selected");
         delete window.transfer_payload;
-        // if payload does not already exist, extract from grid square
-      } else {
+        // if payload does not already exist & square is controlled by own team, extract from grid square
+      } else if (clickedOn.classList.contains(team) && (window.phase === team || window.phase === "preparation")) {
         extractData(clickedOn);
         modifyGrid('grid',modification='highlightSquares');
       }}
